# electrode

./: .flakeaway.json  Cargo.toml  README.md  flake.nix  nixos.nix
.github/workflows/: build.yml
src/: electrodes.rs  main.rs  style.css
src/electrodes/: battery.rs  clock.rs  cpu.rs  cpu_temperature.rs  memory.rs  network.rs  volume.rs
