[package]
name = "electrode"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Thwaites <danthwaites30@btinternet.com>"]
readme = "README.md"
repository = "https://github.com/danth/electrode"
license = "GPL-3.0"

[dependencies]
async-std = "^1"
chrono = "^0.4"
clap = { version = "^3", features = ["derive"] }
gtk = "^0.15"
gtk-layer-shell = "^0.4"
libpulse-binding = "*"
